--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,349 @@
-body {
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+/* Reset & Base Styles */
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape */
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
+  overflow-x: hidden;
+  width: 100%;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Fix for iOS 100vh issue */
+@supports (-webkit-touch-callout: none) {
+  .site-wrapper {
+    min-height: -webkit-fill-available;
+  }
 }
+
+/* Improve tap targets on mobile */
+button, a, input, select, textarea {
+  touch-action: manipulation;
+}
+
+.hide-print {
+  display: block;
+}
+
+@media print {
+  .hide-print {
+    display: none !important;
+  }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.site-wrapper {
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.site-content {
+  position: relative;
+  z-index: 1;
+}
+
+.block {
+  position: relative;
+}
+
+.block-box {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.block-inner {
+  width: 100%;
+}
+
+.col-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
+.col {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+}
+
+.col-24 {
+  width: 100%;
+}
+
+.txt-c {
+  text-align: center;
+}
+
+.bg-gradient-to-dark {
+  background: linear-gradient(to bottom, #f8f8f8, #e0e0e0);
+}
+
+.bg-gradient-hard-to-dark {
+  background: linear-gradient(to bottom, #e0e0e0, #d0d0d0);
+}
+
+.bg-gradient-to-light {
+  background: linear-gradient(to bottom, #d0d0d0, #f8f8f8);
+}
+
+.txt-clr-white {
+  color: white;
+}
+
+.dp-block {
+  display: block;
+}
+
+.object-fit-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+/* For SVG */
+.svg-wrapper svg {
+  width: 100%;
+  height: auto;
+}
+
+.svg-icon {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* Responsive classes */
+@media (min-width: 850px) {
+  .col-11-tablet-m {
+    width: 45.833333%;
+  }
+  
+  .col-12-tablet-m {
+    width: 50%;
+  }
+  
+  .col-13-tablet-m {
+    width: 54.166667%;
+  }
+  
+  .col-18-tablet-m {
+    width: 75%;
+  }
+  
+  .col-20-tablet-m {
+    width: 83.333333%;
+  }
+  
+  .col-22-tablet-m {
+    width: 91.666667%;
+  }
+  
+  .col-l-1-tablet-m {
+    margin-left: 4.166667%;
+  }
+  
+  .col-l-2-tablet-m {
+    margin-left: 8.333333%;
+  }
+  
+  .col-l-3-tablet-m {
+    margin-left: 12.5%;
+  }
+  
+  .margin-top-0-tablet-m {
+    margin-top: 0 !important;
+  }
+  
+  .margin-bottom-0-tablet-m {
+    margin-bottom: 0 !important;
+  }
+  
+  .txt-c-tablet-m {
+    text-align: center;
+  }
+  
+  .txt-l-tablet-m {
+    text-align: left;
+  }
+  
+  .txt-r-tablet-m {
+    text-align: right;
+  }
+  
+  .dp-inline-tablet-m {
+    display: inline;
+  }
+  
+  .dp-block-tablet-m {
+    display: block;
+  }
+  
+  .padding-left-3-tablet-m {
+    padding-left: 12.5%;
+  }
+  
+  .padding-right-3-tablet-m {
+    padding-right: 12.5%;
+  }
+  
+  .dp-none {
+    display: none;
+  }
+  
+  .dp-block-tablet-m {
+    display: block;
+  }
+  
+  .header-nav-container {
+    display: block;
+  }
+}
+
+@media (min-width: 1080px) {
+  .col-5-desktop-s {
+    width: 20.833333%;
+  }
+  
+  .col-8-desktop-s {
+    width: 33.333333%;
+  }
+  
+  .col-9-desktop-s {
+    width: 37.5%;
+  }
+  
+  .col-12-desktop-s {
+    width: 50%;
+  }
+  
+  .col-13-desktop-s {
+    width: 54.166667%;
+  }
+  
+  .col-14-desktop-s {
+    width: 58.333333%;
+  }
+  
+  .col-16-desktop-s {
+    width: 66.666667%;
+  }
+  
+  .col-l-4-desktop-s {
+    margin-left: 16.666667%;
+  }
+  
+  .col-l-5-desktop-s {
+    margin-left: 20.833333%;
+  }
+  
+  .col-l-6-desktop-s {
+    margin-left: 25%;
+  }
+  
+  .padding-left-0-desktop-s {
+    padding-left: 0 !important;
+  }
+  
+  .padding-right-0-desktop-s {
+    padding-right: 0 !important;
+  }
+  
+  .padding-left-3-desktop-s {
+    padding-left: 12.5%;
+  }
+  
+  .padding-right-3-desktop-s {
+    padding-right: 12.5%;
+  }
+  
+  .margin-bottom-2-desktop-s {
+    margin-bottom: 2rem !important;
+  }
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  border: 1px solid #000;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-weight: 500;
+}
+
+.btn:hover {
+  background-color: #333;
+}
+
+.btn-no-border {
+  border: none;
+}
+
+.btn-light {
+  background-color: transparent;
+  color: #fff;
+}
+
+.link-with-icon {
+  display: inline-flex;
+  align-items: center;
+}
+
+.link-with-icon .svg-icon {
+  margin-right: 8px;
+}
+
+/* Margin and Padding utilities */
+.margin-top-1 {
+  margin-top: 1rem;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-medium {
+  margin-bottom: 0.75rem;
+}
+
+.no-margin-bottom {
+  margin-bottom: 0 !important;
+}
+
+.padding-top-1-tablet-m {
+  padding-top: 1rem;
+}
+
+@media (min-width: 850px) {
+  .padding-top-1-tablet-m {
+    padding-top: 1rem;
+  }
+}
+
+/* Various component styles will be added in their specific CSS files */
