--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,6 +49,7 @@
   display: flex;
   align-items: center;
   margin-left: 30px; /* Match right margin of hamburger icon */
+  padding: 5px 0;
 }
 
 .company-name {
@@ -63,6 +64,18 @@
   overflow: visible;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
   transition: all 0.3s ease;
+}
+.company-logo {
+  height: 50px;
+  width: auto;
+  object-fit: contain;
+  transition: all 0.3s ease;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transform: translateZ(0);
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  -webkit-font-smoothing: antialiased;
 }
 
 .company-name:hover {
