--- a/src/components/Search/CarDetail.css
+++ b/src/components/Search/CarDetail.css
@@ -6,16 +6,7 @@
   padding-bottom: 60px;
 }
 
-.detail-page-navbar {
-  background-color: #000000;
-  height: 80px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+/* We're using the Header component from the parent App.js */
 
 .container {
   max-width: 1300px;
