Color prices to black

--- a/src/components/Home/OccasionHighlights.css
+++ b/src/components/Home/OccasionHighlights.css
@@ -283,7 +283,7 @@
 .details-row:first-child .detail-value {
   font-size: 18px;
   font-weight: 700;
-  color: #e70020;
+  color: #000000;
 }
 
 /* View button styling */
